adding more tests, validations, refactorings
